deployment/code/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: code
spec:
    selector:
        matchLabels:
            app: code
    replicas: 1
    template:
        metadata:
            labels:
                app: code
        spec:
            containers:
                - name: replicator
                  image: collabora/code:${CODE_VERSION}
                  ports:
                      - containerPort: 9980
                        name: http
                        protocol: TCP
