deployment/code/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ${CODE_APP_NAME}
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/ssl-redirect: 'true'

        # Allowing clients to upload bigger chunks than usual
        nginx.ingress.kubernetes.io/proxy-body-size: 512m
    labels:
        app: ${CODE_APP_NAME}
spec:
    tls:
    -   secretName: ${CODE_TLS_SECRET_NAME}
        hosts:
        - ${CODE_FQN}
    rules:
    -   host: ${CODE_FQN}
        http:
            paths:
            -   path: /
                pathType: Prefix
                backend:
                    service:
                        name: code
                        port:
                            name: http
